# ie0417-dev

./: .gitignore  README.md  signed
docs/source/labs/: labs.rst
docs/source/labs/lab1/: lab1.rst
docs/source/labs/lab2/: lab1.rst
docs/source/labs/lab2/eieManager/: main.py  requirements.txt  setup.py  test.py
docs/source/labs/lab2/eieManager/config/: devices.json  readJson.py
docs/source/labs/lab2/eieManager/config/.mypy_cache/3.8/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  (+5 more)
docs/source/labs/lab2/eieManager/lib/device_commands/: __init__.py  args.py  main.py  serverAPI.py  testDeviceManager.py  utils.py
docs/source/labs/lab3/eieDevice/: CMakeLists.txt
docs/source/labs/lab3/eieDevice/src/: transportServer.c
docs/source/labs/lab3/eieDevice/transport_server/src/: zmq_server_rep_pthread.c
docs/source/labs/lab3/eie_Device/: CMakeLists.txt
docs/source/labs/lab3/eie_Device/src/: CMakeLists.txt
docs/source/labs/lab3/eie_Device/src/Device/: CMakeLists.txt  command.c  command.h  command_manager.c  command_manager.h  command_runner.h  device.c  device.h  factory.h  version.h
docs/source/labs/lab3/eie_Device/src/TransportClient/: trasnportClient.py
docs/source/labs/lab3/eie_Device/src/TransportServer/: CMakeLists.txt  transportServer.c
docs/source/labs/lab3/eie_Device/tools/: CMakeLists.txt  main.c
docs/source/labs/lab3/sensor_commands/config/: sensors_cfg.json
docs/source/labs/lab3/sensor_commands/tools/sensor_cmds/: main.c
(+515 files in other folders)
